Fix page overflow

--- a/src/pages/leaderbird/Leaderbird.scss
+++ b/src/pages/leaderbird/Leaderbird.scss
@@ -1,6 +1,7 @@
 @import '../../theme.scss';
 
 .leaderbird-main {
+    padding: 0 !important;
     
     .leaderbird{
         position: fixed;
