--- a/src/pages/userStats/UserStats.scss
+++ b/src/pages/userStats/UserStats.scss
@@ -1,6 +1,7 @@
 @import '../../theme.scss';
 
 .stats-main {
+    padding: 0 !important;
 
     .parent {
         position: absolute;
